--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8768,17 +8768,17 @@ a:hover {
 }
 
 /*a:not([href]):not([tabindex]) {*/
-  /*color: inherit;*/
-  /*text-decoration: none;*/
+/*color: inherit;*/
+/*text-decoration: none;*/
 /*}*/
 
 /*a:not([href]):not([tabindex]):hover, a:not([href]):not([tabindex]):focus {*/
-  /*color: inherit;*/
-  /*text-decoration: none;*/
+/*color: inherit;*/
+/*text-decoration: none;*/
 /*}*/
 
 /*a:not([href]):not([tabindex]):focus {*/
-  /*outline: 0;*/
+/*outline: 0;*/
 /*}*/
 
 pre,
@@ -12949,17 +12949,17 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #007bff;
+  color: #9a55ff;
   background-color: #fff;
-  border: 1px solid #dee2e6;
+  border: 1px solid #da8cff;
 }
 
 .page-link:hover {
   z-index: 2;
-  color: #0056b3;
+  color: #da8cff;
   text-decoration: none;
   background-color: #e9ecef;
-  border-color: #dee2e6;
+  border-color: #da8cff;
 }
 
 .page-link:focus {
@@ -12986,16 +12986,16 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 1;
   color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
+  background: linear-gradient(to right, #da8cff, #9a55ff);
+  border-color: #9a55ff;
 }
 
 .page-item.disabled .page-link {
-  color: #6c757d;
+  color: #9a55ff;
   pointer-events: none;
   cursor: auto;
   background-color: #fff;
-  border-color: #dee2e6;
+  border-color: #da8cff;
 }
 
 .pagination-lg .page-link {
@@ -17765,9 +17765,9 @@ input:focus {
 }
 
 .navbar.default-layout-navbar .navbar-brand-wrapper .navbar-brand img {
-  width: calc(260px - 120px);
+  width: calc(260px - 60px);
   max-width: 100%;
-  height: 28px;
+  /*height: 28px;*/
   margin: auto;
   vertical-align: middle;
 }
@@ -18524,7 +18524,7 @@ html {
 .main-panel {
   transition: width 0.25s ease, margin 0.25s ease;
   /*width: calc(100% - 260px);*/
-  min-height: calc(100vh - 0px);
+  min-height: calc(100vh);
   display: -webkit-flex;
   display: flex;
   -webkit-flex-direction: column;
@@ -20871,16 +20871,16 @@ dl li {
   line-height: 1;
 }
 
-.table th img,
-.table td img {
+.table th img.avatar,
+.table td img.avatar {
   width: 36px;
   height: 36px;
   border-radius: 100%;
 }
 
 .table th .badge,
-.table td .badge {
-  margin-bottom: 5px;
+.table td .badge {ava
+margin-bottom: 5px;
 }
 
 .table.table-borderless {
@@ -20911,7 +20911,7 @@ dl li {
 }
 
 .auth .brand-logo img {
-  width: 150px;
+  width: 300px;
 }
 
 .auth form .form-group {
@@ -20941,12 +20941,12 @@ dl li {
   color: initial;
 }
 .menu-switch{
-    font-size: 16px;
-    cursor: pointer;
+  font-size: 16px;
+  cursor: pointer;
 }
 .img-yl{
   display: none;
-    margin-top: 5px;
+  margin-top: 5px;
 }
 .img-yl img{
   width: 200px;
@@ -20962,4 +20962,14 @@ dl li {
 .box-footer ul{
   float: right;
 }
+.table th .form-check{
+  padding: 0;
+  margin: 0;
+}
+.table td .form-check{
+  margin-bottom: 10px;
+  padding: 0;
+  margin: 0;
+}
+
 /*# sourceMappingURL=maps/style.css.map */
